feat: imputer/models module created

--- a/xgb.ipynb
+++ b/xgb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "6e97e3aa",
    "metadata": {},
    "outputs": [],
@@ -20,52 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ffc1e4c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Peritonitis  Ketones_in_Urine  Nausea  Free_Fluids  Loss_of_Appetite  \\\n",
-      "0            0.0               2.0     0.0          0.0               1.0   \n",
-      "1            0.0               0.0     0.0          0.0               1.0   \n",
-      "2            0.0               0.0     0.0          0.0               0.0   \n",
-      "3            0.0               0.0     1.0          0.0               1.0   \n",
-      "4            0.0               0.0     1.0          0.0               1.0   \n",
-      "..           ...               ...     ...          ...               ...   \n",
-      "777          1.0               NaN     0.0          0.0               1.0   \n",
-      "778          1.0               NaN     0.0          0.0               1.0   \n",
-      "779          0.0               0.0     0.0          1.0               0.0   \n",
-      "780          1.0               3.0     1.0          1.0               0.0   \n",
-      "781          1.0               0.0     0.0          0.0               0.0   \n",
-      "\n",
-      "     Appendix_Diameter    CRP  WBC_Count  Neutrophil_Percentage  Diagnosis  \n",
-      "0                  7.1    0.0        7.7                   68.2          1  \n",
-      "1                  NaN    3.0        8.1                   64.8          0  \n",
-      "2                  NaN    3.0       13.2                   74.8          0  \n",
-      "3                  NaN    0.0       11.4                   63.0          0  \n",
-      "4                  7.0    0.0        8.1                   44.0          1  \n",
-      "..                 ...    ...        ...                    ...        ...  \n",
-      "777                7.5   71.0       11.4                   76.6          1  \n",
-      "778                NaN  245.0       17.4                   89.2          1  \n",
-      "779                NaN    2.0       14.6                   68.5          1  \n",
-      "780               14.0    8.0       17.8                   77.0          1  \n",
-      "781                8.0    1.0        9.3                   70.0          1  \n",
-      "\n",
-      "[780 rows x 10 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_2229/2790724999.py:25: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df_base[col]=df_base[col].replace(mapping)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_base=pd.read_excel('dataset_780.xlsx',sheet_name=0)\n",
     "\n",
@@ -106,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "8cf39c6a",
    "metadata": {},
    "outputs": [],
@@ -123,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "3019cd52",
    "metadata": {},
    "outputs": [],
@@ -143,23 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "db9157d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean cross_val accuracy Score: 0.8909343200740055\n",
-      "Standard Deviation of cross_val accuracy Scores: 0.022801412132471593\n",
-      "Mean cross_val auc-roc score: 0.9594082428292954\n",
-      "Standard Deviation of auc-roc Scores: 0.023121778017022976\n",
-      "Mean cross_val recall score: 0.9084656084656085\n",
-      "Standard Deviation of recall Scores: 0.04120449989464045\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_xgb.fit(x_train, y_train)\n",
     "scores = cross_val_score(model_xgb, x_train, y_train, cv=10, scoring='accuracy', n_jobs=2)\n",
@@ -177,38 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "d65fc89e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal Threshold Youden: 0.9569246172904968 and Optimal Euclidean Distance :0.9152830839157104\n",
-      "Val AUC: 0.9447811447811448\n",
-      "For Youden Index\n",
-      "Sensitivity: 0.844 (84.44%)\n",
-      "Specificity: 0.939 (93.94%)\n",
-      "Positive predictive value : 0.950(95.00%)\n",
-      "Negative predictive value : 0.816(81.58%)\n",
-      "Val Confusion Matrix:\n",
-      " [[62  4]\n",
-      " [14 76]]\n",
-      "Val accuracy score: 0.8846153846153846\n",
-      "Val AUC: 0.9447811447811448\n",
-      "For Eucledean distance\n",
-      "Sensitivity: 0.889 (88.89%)\n",
-      "Specificity: 0.864 (86.36%)\n",
-      "Positive predictive value : 0.899(89.89%)\n",
-      "Negative predictive value : 0.851(85.07%)\n",
-      "Val Confusion Matrix:\n",
-      " [[57  9]\n",
-      " [10 80]]\n",
-      "Val accuracy score: 0.8782051282051282\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -225,7 +142,7 @@
     "print(f\"Optimal Threshold Youden: {optimal_threshold} and Optimal Euclidean Distance :{optimal_threshold_eu}\")\n",
     "\n",
     "threshold_y = optimal_threshold\n",
-    "threshold_eu = 0.8\n",
+    "threshold_eu = optimal_threshold_eu\n",
     "\n",
     "\n",
     "y_val_prob=model_xgb.predict_proba(x_val)[:,1]\n",
@@ -274,6 +191,14 @@
     "val_acu=accuracy_score(y_val,y_thres)\n",
     "print(\"Val accuracy score:\",val_acu)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5af0a082",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
