--- a/data_curation/dharma_dataset.ipynb
+++ b/data_curation/dharma_dataset.ipynb
@@ -2,56 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from scipy import stats\n"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Management\n",
-      "conservative                 483\n",
-      "primary surgical             270\n",
-      "secondary surgical            27\n",
-      "simultaneous appendectomy      1\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1=pd.read_excel('dataset_780.xlsx',sheet_name=0)\n",
     "df2=pd.read_excel('dataset_430.xlsx')\n",
-    "print (df1['Management'].value_counts())\n",
-    "\n",
-    "# confidence = 0.95\n",
-    "# data=df1['Age'].dropna()\n",
-    "# # Calculate mean and standard error\n",
-    "# mean = np.mean(data)\n",
-    "# sem = stats.sem(data)  # Standard Error of the Mean\n",
-    "\n",
-    "# # t-distribution-based confidence interval\n",
-    "# ci = stats.t.interval(confidence, df=len(data)-1, loc=mean, scale=sem)\n",
-    "\n",
-    "# print(f\"Mean: {mean}\")\n",
-    "# print(f\"95% Confidence Interval: {ci}\")\n",
-    "# print (len(df1.columns))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,26 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(780, 17)\n",
-      "(430, 17)\n",
-      "(1015, 17)\n",
-      "(236, 17)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_15420/3777711301.py:8: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_16470/1051358115.py:10: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df1[col]=df1[col].replace(mapping)\n",
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_15420/3777711301.py:9: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_16470/1051358115.py:11: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df2[col]=df2[col].replace(mapping)\n"
      ]
     }
@@ -107,8 +69,10 @@
    "source": [
     "\n",
     "df1 = df1.dropna(subset=['Diagnosis'])\n",
-    "df1=df1[df1_col].fillna(0)\n",
-    "df2=df2[df2_col].fillna(0)\n",
+    "df1=df1[df1_col].fillna(-1)\n",
+    "df2=df2[df2_col].fillna(-1)\n",
+    "\n",
+    "\n",
     "\n",
     "df2.columns=df1_col\n",
     "\n",
@@ -116,13 +80,11 @@
     "    df1[col]=df1[col].replace(mapping)\n",
     "    df2[col]=df2[col].replace(mapping)\n",
     "\n",
-    "print(df1.shape)\n",
-    "print(df2.shape)\n",
     "\n",
     "df_combined = pd.concat([df1, df2], ignore_index=True)\n",
     "df_combined=df_combined.drop_duplicates()\n",
+    "df_combined =df_combined.replace()\n",
     "\n",
-    "print(df_combined.shape)\n",
     "\n",
     "df_combined.to_excel('dataset_combined.xlsx', index=False)\n",
     "\n",
@@ -133,21 +95,21 @@
     "\n",
     "df2_only = pd.DataFrame(list(diff_set), columns=df2.columns)\n",
     "\n",
-    "print(df2_only.shape)\n",
     "\n",
-    "df2_only.to_excel('dataset_unique.xlsx',index=False)\n"
+    "df2_only.to_excel('dataset_unique.xlsx',index=False)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(236, 17)\n"
+      "(289, 17)\n"
      ]
     }
    ],
@@ -160,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -170,42 +132,36 @@
       "For Alvarado Score\n",
       "Diagnosis  0.0  1.0\n",
       "as_labels          \n",
-      "<=4         43   13\n",
-      "5-6         35   51\n",
-      ">=7         18   76\n",
+      "<=4         46   26\n",
+      "5-6         38   63\n",
+      ">=7         18   98\n",
       "For PAS\n",
       "Diagnosis   0.0  1.0\n",
       "pas_labels          \n",
-      "<=5          73   73\n",
-      ">=6          23   67\n",
+      "<=5          79  100\n",
+      ">=6          23   87\n",
       "Diagnosis   0.0  1.0\n",
       "usg_labels          \n",
-      "<6           34    9\n",
-      ">=6           2  111\n"
+      "<6           36    9\n",
+      ">=6           2  145\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_15420/659340645.py:8: SettingWithCopyWarning: \n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_16470/659340645.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_unique['as_labels'] = pd.cut(df_unique['Alvarado_Score'],bins=alvarado_bins,labels=alvarado_labels,right=True )\n",
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_15420/659340645.py:17: SettingWithCopyWarning: \n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_16470/659340645.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_unique['pas_labels'] = pd.cut(df_unique['Paedriatic_Appendicitis_Score'],bins=pas_bins,labels=pas_labels,right=True )\n",
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_15420/659340645.py:28: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df2_usg['usg_labels'] = pd.cut(df2_usg['Appendix_Diameter'],bins=usg_bins,labels=usg_labels,right=False )\n"
+      "  df_unique['pas_labels'] = pd.cut(df_unique['Paedriatic_Appendicitis_Score'],bins=pas_bins,labels=pas_labels,right=True )\n"
      ]
     }
    ],
