--- a/data_curation/dharma_dataset.ipynb
+++ b/data_curation/dharma_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,21 +47,29 @@
     "    'noAppendicitis':0,\n",
     "    'uncomplicated':0,\n",
     "    'complicated':1,\n",
-    "}"
+    "    \n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(289, 17)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_16470/1051358115.py:10: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_19436/3690891886.py:10: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df1[col]=df1[col].replace(mapping)\n",
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_16470/1051358115.py:11: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_19436/3690891886.py:11: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df2[col]=df2[col].replace(mapping)\n"
      ]
     }
@@ -83,8 +91,8 @@
     "\n",
     "df_combined = pd.concat([df1, df2], ignore_index=True)\n",
     "df_combined=df_combined.drop_duplicates()\n",
-    "df_combined =df_combined.replace()\n",
     "\n",
+    "df_combined = df_combined.replace(-1, np.nan)\n",
     "\n",
     "df_combined.to_excel('dataset_combined.xlsx', index=False)\n",
     "\n",
@@ -95,108 +103,24 @@
     "\n",
     "df2_only = pd.DataFrame(list(diff_set), columns=df2.columns)\n",
     "\n",
-    "\n",
+    "df2_only= df2_only.replace(-1, np.nan)\n",
     "df2_only.to_excel('dataset_unique.xlsx',index=False)\n",
+    "print (df2_only.shape)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(289, 17)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tools = ['Alvarado_Score','Paedriatic_Appendicitis_Score','Appendix_Diameter','Diagnosis']\n",
-    "print(df2_only.shape)\n",
+    "df_yes=df_combined[df_combined['Diagnosis']==1]\n",
     "\n",
-    "df2_usg = df2_only[df2_only['Appendix_Diameter'] != 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For Alvarado Score\n",
-      "Diagnosis  0.0  1.0\n",
-      "as_labels          \n",
-      "<=4         46   26\n",
-      "5-6         38   63\n",
-      ">=7         18   98\n",
-      "For PAS\n",
-      "Diagnosis   0.0  1.0\n",
-      "pas_labels          \n",
-      "<=5          79  100\n",
-      ">=6          23   87\n",
-      "Diagnosis   0.0  1.0\n",
-      "usg_labels          \n",
-      "<6           36    9\n",
-      ">=6           2  145\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_16470/659340645.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_unique['as_labels'] = pd.cut(df_unique['Alvarado_Score'],bins=alvarado_bins,labels=alvarado_labels,right=True )\n",
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_16470/659340645.py:17: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_unique['pas_labels'] = pd.cut(df_unique['Paedriatic_Appendicitis_Score'],bins=pas_bins,labels=pas_labels,right=True )\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Performance of tools in unique dataset\n",
-    "\n",
-    "df_unique=df2_only[tools]\n",
-    "\n",
-    "alvarado_bins=[0,4,6,10] # right = true\n",
-    "alvarado_labels=['<=4','5-6','>=7']\n",
-    "\n",
-    "df_unique['as_labels'] = pd.cut(df_unique['Alvarado_Score'],bins=alvarado_bins,labels=alvarado_labels,right=True )\n",
-    "\n",
-    "as_contingency_table = pd.crosstab(df_unique['as_labels'], df_unique['Diagnosis'])\n",
-    "print('For Alvarado Score')\n",
-    "print(as_contingency_table)\n",
-    "\n",
-    "pas_bins=[0,5,10] # right = true\n",
-    "pas_labels=['<=5','>=6']\n",
-    "\n",
-    "df_unique['pas_labels'] = pd.cut(df_unique['Paedriatic_Appendicitis_Score'],bins=pas_bins,labels=pas_labels,right=True )\n",
-    "\n",
-    "pas_contingency_table = pd.crosstab(df_unique['pas_labels'], df_unique['Diagnosis'])\n",
-    "print('For PAS')\n",
-    "print(pas_contingency_table)\n",
-    "\n",
-    "# For USG\n",
-    "\n",
-    "usg_bins=[0,6,50] # right = false\n",
-    "usg_labels=['<6','>=6']\n",
-    "\n",
-    "df2_usg['usg_labels'] = pd.cut(df2_usg['Appendix_Diameter'],bins=usg_bins,labels=usg_labels,right=False )\n",
-    "\n",
-    "usg_contingency_table = pd.crosstab(df2_usg['usg_labels'], df2_usg['Diagnosis'])\n",
-    "print(usg_contingency_table)\n"
+    "df_yes.to_excel('dataset_comp.xlsx', index=False)\n",
+    "\n"
    ]
   }
  ],
